--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.0.1",
     "mongoose": "^5.13.4",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.12",
     "validator": "^13.6.0"
   }
