--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.13.4",
     "multer": "^1.4.3",
     "nodemon": "^2.0.12",
+    "sharp": "^0.28.3",
     "validator": "^13.6.0"
   }
 }
