--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +18,11 @@
     "mongodb": "^4.0.1",
     "mongoose": "^5.13.4",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.12",
     "sharp": "^0.28.3",
     "validator": "^13.6.0"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0",
+    "nodemon": "^2.0.12"
   }
 }
